# rust-completion-experiment

./: .gitignore  Cargo.toml  README.md
examples/: cli.rs  web.rs
opaquekeys/: Cargo.toml
opaquekeys/src/: lib.rs
src/: aggregator.rs  lib.rs  xblock.rs
src/adapters/: db.rs  mod.rs  rest.rs  stubs.rs
src/ports/: blockcompletions.rs  course.rs  coursestructure.rs  enrollment.rs  mod.rs
tests/: basic.rs
