[package]
name = "completion"
version = "0.1.0"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
edition = "2018"

[dependencies]
opaquekeys = {"path" = "opaquekeys"}
mysql = "*"
reqwest = {git = "https://github.com/seanmonstar/reqwest", features = ["native-tls-vendored"]}
serde = "*"
serde_derive = "*"
serde_json = "*"
