[package]
name = "completion"
version = "0.1.0"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
edition = "2018"

[dependencies]
clap = {version = "2", optional = true}
mysql = "*"
opaquekeys = {"path" = "opaquekeys"}
reqwest = {git = "https://github.com/seanmonstar/reqwest", features = ["native-tls-vendored"]}
serde = "*"
serde_derive = "*"
serde_json = "*"

[features]
cli = ["clap"]

[[example]]
name = "cli"
required-features = ["cli"]

